# QRecon

./: .gitignore  LICENSE  README.md  auth_probes.json  cli.py  pyproject.toml  report.json  test_advanced_adversarial.py  test_auth_stress.py  test_enum_stress.py  test_llm_malform.py
docs/: adversarial-review-v2.md  adversarial-review.md  defcon-readiness.md
qrecon/: cli.py  config.py
qrecon/auth_probe/: credential_leak.py  cross_tenant.py  rate_limits.py  token_scope.py
qrecon/circuit_lens/: disclosure_heuristics.py  models.py  parser.py  timing_oracle.py
qrecon/platform_enum/: azure.py  braket.py  ibm.py  ionq.py  models.py
qrecon/q_attck/: loader.py  mapper.py  models.py  taxonomy.json
qrecon/qhypo/: agent.py  models.py  prompts.py
tests/: test_auth_probe.py  test_circuit_lens.py  test_integration.py  test_platform_enum.py  test_q_attck.py  test_qhypo.py
tests/fixtures/: mock_braket_responses.json  mock_ibm_responses.json
tests/fixtures/sample_circuits/: calibration_extractor.qasm  massive_malformed.qasm  massive_valid.qasm  suspicious_timing_probe.qasm
