[project]
name = "qrecon"
version = "0.1.0"
description = "Offensive security reconnaissance framework for quantum cloud infrastructure"
requires-python = ">=3.11"
dependencies = [
    "qiskit>=1.0.0",
    "qiskit-ibm-runtime>=0.20.0",
    "amazon-braket-sdk>=1.73.0",
    "pyzx>=0.7.3",
    "mitiq>=0.35.0",
    "openqasm3>=0.5.0",
    "anthropic>=0.25.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "PyGithub>=2.3.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0"
]
